# pysigtool

./: .gitignore  README.md  mypy.ini  pyproject.toml  pysigtool.py
tests/: ref.der  test_pysigtool.py
