[tool.poetry]
name = "pysigtool"
version = "0.1.1"
description = ""
readme = "README.md"
authors = ["Koh M. Nakagawa <tsunekou1019@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lief = "^0.10.1"

[tool.poetry.scripts]
pysigtool = "pysigtool:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
mypy = "^0.782"
isort = "^5.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
